Update docker config and rendering